--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,26 @@ img {
   display: block;
 }
 /* Styling element*/
+.card-author {
+  margin: .8em 0;
+  opacity: .5;
+}
+
+.card-img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin-bottom: 1em;
+}
+.card {
+  padding: 1em;
+  background: var(--clr-container);
+  border-radius: 5px;
+  margin: 2em;
+  display: inline-block;
+  text-align: center;
+}
+
 .intro-img {
   margin-bottom: 1em;
 }
@@ -129,15 +149,15 @@ img {
 .btn {
   align-self: center;
   display:inline-block;
-  width: 10em;
   font-size: var(--fs-body);
   text-transform: uppercase;
+  letter-spacing: 5px;
   background: var(--clr-accent);
   color: var(--clr-light);
   border: none;
   border-radius: 2.5px;
   font-weight: bold;
-  padding: .5em 2em;
+  padding: .5em 1.5em;
   cursor: pointer;
 }
 
