--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
   --fs-h1: 3rem;
   --fs-h2: 2rem;
   --fs-h3: 1.75rem;
+  --fs-h4: 1.5rem;
   --fs-body : 1.25rem;
 
 }
@@ -23,7 +24,8 @@
     --fs-h1: 4rem;
     --fs-h2: 3rem;
     --fs-h3: 2rem;
-    --fs-body : 1.75rem;
+    --fs-h4: 1.75;
+    --fs-body : 1.5rem;
   }
 }
 
@@ -44,12 +46,31 @@ h1,h2,h3,h4,p {
 h1 {font-size: var(--fs-h1);}
 h2 {font-size: var(--fs-h2);}
 h3 {font-size: var(--fs-h3);}
+h4 {font-size: var(--fs-h4);}
 
 img {
   width: 100%;
   display: block;
 }
 /* Styling element*/
+.info-list li {
+  display: flex;
+  justify-content: space-between;
+}
+
+.info-icon {
+  margin-right: 1em;
+}
+
+.list {
+  padding: 0;
+  list-style-type: none;
+  text-align: left;
+}
+.list h4 {
+  align-self: left;
+}
+
 .icons-container {
   margin-top: 1em;
 }
